# name_split

./: .gitignore  README.md  main.py  model_explanation.md  pyproject.toml  scripts.py
scripts/: model_training.py  utils.py
