[project]
name = "name-split"
version = "0.1.0"
description = "split name by gender"
authors = [
    {name = "dossantos-lukombo",email = "dossantos.lukombo918@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.3.1,<3.0.0)",
    "scikit-learn (>=1.7.0,<2.0.0)",
    "numpy (>=2.3.1,<3.0.0)",
    "transformers (>=4.53.2,<5.0.0)",
    "sentence-transformers (>=5.0.0,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
